@@ -72,7 +72,7 @@ get_config_value <- function(config_input, level_1, level_2) {
 # initial config_meta_format
 
 initial_params <- function(config_file, config_list, input_type, this_section, meta_flag, format_flag, hander_funs = NULL, 
-  mhander_funs = NULL) {
+  mhander_funs = NULL, hander_confg_file = NULL, mhander_confg_file = NULL) {
   if (is.null(config_list)) {
     config_meta <- eval.config(value = meta_flag, config = this_section, file = config_file)
     config_format <- eval.config(value = format_flag, config = this_section, file = config_file)
@@ -82,10 +82,18 @@ initial_params <- function(config_file, config_list, input_type, this_section, m
   }
   defined_cols <- config_meta[["defined_cols"]][["colnames"]]
   if (is.null(hander_funs)) {
-    hander_funs <- config_meta[["defined_cols"]][["hander_funs"]]
+    hander_lib <- config_meta[["defined_cols"]][["hander_lib"]]
+    if (is.null(hander_lib)) {
+      hander_lib <- "default_handers"
+    }
+    hander_funs <- eval.config(value = hander_lib, config = "hander", file = hander_confg_file) 
   }
   if (is.null(mhander_funs)) {
-    mhander_funs <- config_meta[["defined_cols"]][["mhander_funs"]]
+    mhander_lib <- config_meta[["defined_cols"]][["mhander_lib"]]
+    if (is.null(mhander_lib)) {
+      mhander_lib <- "default_mhanders"
+    }
+    mhander_funs <- eval.config(value = mhander_lib, config = "mhander", file = mhander_confg_file) 
   }
   config_input <- config_format[[input_type]]
   return(list(config_meta = config_meta, config_format = config_format, config_input = config_input, defined_cols = defined_cols, 
