@@ -1,11 +1,6 @@
 Title = "ngstk hander configuration file"
 
 [hander]
-avaliable_handers = ["handler_na_replace", "handler_lower", "handler_upper",
+default_handers = ["handler_na_replace", "handler_lower", "handler_upper",
                      "handler_value_map", "handler_extract", "handler_split",
                      "handler_prefix", "handler_postfix"]
-
-[mhander]
-avaliable_handers = ["mhander_fusions_left_match", "mhander_fusions_right_match",
-                     "mhander_fusions_any_match", "mhander_fusions_full_match", 
-                     "mhander_fusions_anyfull_match"]
