@@ -1,0 +1,6 @@
+Title = "ngstk mhander configuration file"
+
+[mhander]
+default_mhanders = ["mhander_fusions_left_match", "mhander_fusions_right_match",
+                     "mhander_fusions_any_match", "mhander_fusions_full_match",
+                     "mhander_fusions_anyfull_match"]
