@@ -3,9 +3,8 @@ Title = "Proteinpaint configuration file"
 # muts2pp is a function that can convert mutation data to Proteinpaint input format
 [muts2pp.meta.defined_cols]
 colnames = ["gene", "refseq", "chromosome", "start", "aachange", "class", "disease", "sample"]
-hander_funs = ["handler_na_replace", "handler_lower", "handler_upper",
-              "handler_value_map", "handler_extract", "handler_split",
-              "handler_prefix", "handler_postfix"]
+hander_lib = "default_handers"
+mhander_lib = "default_mhanders"
 [muts2pp.meta.defined_cols.description]
 gene = "Gene symbol, e.g TP53, PTEN"
 refseq = "Transcript of refSeq or Ensemble, e.g NM_000546, ENST00000635293"
@@ -51,10 +50,8 @@ alias = ["sample", "patient.id", "patient"]
 colnames = ["disease", "sampletype", "gene_a", "refseq_a",
             "chr_a", "position_a", 	"gene_b",	"refseq_b", "chr_b",
             "position_b",  "strand_a", "strand_b", "patient"]
-hander_funs = ["handler_na_replace", "handler_lower", "handler_upper",
-               "handler_value_map", "handler_extract", "handler_split",
-               "handler_prefix", "handler_postfix"]
-
+hander_lib = "default_handers"
+mhander_lib = "default_mhanders"
 [fusions2pp.meta.defined_cols.description]
 disease = "Disease type, e.g. B-ALL, T-ALL, AML"
 sampletype = "Sample group information ,e.g diagnosis, relapse"
@@ -128,9 +125,8 @@ alias = ["sample", "patient.id", "patient", "SampleName"]
 
 [fusions2pp_meta.meta.defined_cols]
 colnames = ["sample", "term", "group", "value", "color", "legendorder"]
-hander_funs = ["handler_na_replace", "handler_lower", "handler_upper",
-               "handler_value_map", "handler_extract", "handler_split",
-               "handler_prefix", "handler_postfix"]
+hander_lib = "default_handers"
+mhander_lib = "default_mhanders"
 [fusions2pp_meta.meta.defined_cols.description]
 sample = "Patient samplename"
 term = "Such as Age, Sex .etc."
