@@ -4,6 +4,8 @@
                 * inst/extdata/config/filter.toml, hander.toml be added
                 * hander and mhander functions be added
                 * rename mut2pp and fusion2pp
+                * inst/extdata/config/hander.toml and mhander.toml be added
+                * hander_confg_file and mhander_confg_file API be added
 
 2017-09-29 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
